[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/MainMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/main.gd" type="Script" id=3]

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="MainMenu" parent="." instance=ExtResource( 1 )]

[node name="MusicCooldown" type="Timer" parent="."]
wait_time = 0.3

[connection signal="changed_volume" from="MainMenu" to="." method="_on_MainMenu_changed_volume"]
[connection signal="credits_pressed" from="MainMenu" to="." method="_on_MainMenu_credits_pressed"]
[connection signal="play_pressed" from="MainMenu" to="." method="_on_MainMenu_play_pressed"]
[connection signal="quit_pressed" from="MainMenu" to="." method="_on_MainMenu_quit_pressed"]
[connection signal="scores_pressed" from="MainMenu" to="." method="_on_MainMenu_scores_pressed"]
[connection signal="selected_difficulty_level" from="MainMenu" to="." method="_on_MainMenu_selected_difficulty_level"]
[connection signal="vfx_pressed" from="MainMenu" to="." method="_on_MainMenu_vfx_pressed"]
[connection signal="timeout" from="MusicCooldown" to="." method="_on_MusicCooldown_timeout"]
